<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UploadMarketActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:theme="@style/Theme.Agrodeo.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorOnPrimary"
            app:titleTextAppearance="@style/Theme.Agrodeo.Poppins"
            app:subtitleTextAppearance="@style/Theme.Agrodeo.PoppinsLight"
            app:titleTextColor="?attr/colorOnBackground"
            app:subtitleTextColor="?attr/colorOnBackground" />
        <!-- app:popupTheme="@style/Theme.Agrodeo.PopUpOverlay" -->

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_top_bottom_constraint_layout_2">

            <TextView
                android:id="@+id/tvWelcomeRegisterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginVertical="150dp"
                android:gravity="center"
                android:fontFamily="@font/poppins_semibold"
                android:text="@string/register_product_market"
                android:textSize="36dp"
                tools:ignore="SpUsage" />

            <TextView
                android:id="@+id/tvRegisterTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvWelcomeRegisterTitle"
                android:layout_marginVertical="@dimen/margin_top_bottom_between_constraint_layout_1"
                android:gravity="center"
                android:ems="10"
                android:fontFamily="@font/poppins_light"
                android:text="@string/register_product_market_more"
                android:textSize="18dp"
                tools:ignore="SpUsage" />

            <LinearLayout
                android:id="@+id/image_show_market"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvRegisterTitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="40dp"
                android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    app:cardBackgroundColor="?attr/colorSecondary"
                    app:cardCornerRadius="8dp">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/selected_img"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:scaleType="fitXY"
                        android:elevation="5dp"/>

                </androidx.cardview.widget.CardView>

                <Button
                    android:id="@+id/btn_select"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                    android:text="@string/pick_an_image"
                    android:textStyle="bold"
                    android:elevation="5dp"/>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/product_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/image_show_market"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                android:layout_marginTop="@dimen/margin_top_bottom_constraint_layout"
                android:layout_marginBottom="@dimen/margin_top_bottom_constraint_layout_2"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_top_bottom_constraint_layout_2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="5"
                        android:text="@string/tv_market_product_name" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Design.TextInputLayout">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/product_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:ems="18"
                            android:hint="@string/market_product_name"
                            android:inputType="textPersonName"
                            android:lines="1" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/product_weight_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_name_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                android:layout_marginVertical="@dimen/margin_top_bottom_between_constraint_layout_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_top_bottom_constraint_layout_2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="5"
                        android:text="@string/tv_market_product_weight" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Design.TextInputLayout">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/product_weight"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:lines="1"
                            android:ems="18"
                            android:hint="@string/market_product_weight" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/product_price_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_weight_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                android:layout_marginVertical="@dimen/margin_top_bottom_between_constraint_layout_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_top_bottom_constraint_layout_2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="5"
                        android:text="@string/tv_market_product_price" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Design.TextInputLayout">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/product_price"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"
                            android:lines="1"
                            android:ems="18"
                            android:hint="@string/market_product_price" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/product_location_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_price_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                android:layout_marginVertical="@dimen/margin_top_bottom_between_constraint_layout_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_top_bottom_constraint_layout_2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="5"
                        android:text="@string/tv_market_product_location" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Design.TextInputLayout">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/product_location"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="textPersonName"
                            android:lines="1"
                            android:ems="18"
                            android:hint="@string/market_product_location" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/contact_number_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/product_location_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                android:layout_marginVertical="@dimen/margin_top_bottom_between_constraint_layout_1"
                app:cardCornerRadius="10dp"
                app:cardElevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/margin_top_bottom_constraint_layout_2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="5"
                        android:text="@string/tv_market_contact_number" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Widget.Design.TextInputLayout">

                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/contact_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="phone"
                            android:lines="1"
                            android:ems="18"
                            android:hint="@string/market_contact_number" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/btn_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/contact_number_layout"
                android:layout_marginHorizontal="@dimen/margin_top_bottom_constraint_layout_2"
                android:layout_marginVertical="@dimen/margin_start_end_constraint_layout_1"
                android:text="@string/upload_market" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>