<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:foregroundGravity="center"
    android:clickable="true"
    android:focusable="true"
    app:cardCornerRadius="10dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/list_item"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:elevation="0dp"
        android:padding="20dp"
        android:background="?attr/selectableItemBackground"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardBackgroundColor="@color/white">

            <androidx.cardview.widget.CardView
                android:layout_width="120dp"
                android:layout_height="120dp"
                app:cardCornerRadius="10dp"
                android:layout_gravity="center">

                <ImageView
                    android:id="@+id/product_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/wortel_1"
                    android:scaleType="centerCrop"
                    android:contentDescription="@string/market" />

            </androidx.cardview.widget.CardView>

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_1"
            android:ems="7"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/product_name_sample"
            android:textColor="?attr/colorPrimary"
            android:textSize="16dp"
            tools:ignore="SpUsage" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@id/product_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="7"
            android:fontFamily="@font/poppins_medium"
            android:gravity="center"
            android:text="@string/product_price_sample"
            android:textColor="?attr/colorOnBackground" />

    </LinearLayout>

</androidx.cardview.widget.CardView>