<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FirstOpenActivity">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/appCompatImageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:alpha="0.4"
        android:background="@drawable/bg_first_open"
        tools:layout_editor_absoluteX="-57dp"
        tools:layout_editor_absoluteY="192dp" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_bottom_constraint_layout_2"
            android:elevation="10dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_launcher"
            android:scaleType="centerCrop" />
            <!-- android:background="@drawable/rounded_logo" -->

        <!--
        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="5dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/margin_start_end_constraint_layout_2"
            android:layout_marginEnd="@dimen/margin_start_end_constraint_layout_2"
            android:background="@drawable/buttonshape" /> -->

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top_bottom_between_constraint_layout_2"
            android:layout_marginBottom="@dimen/margin_start_end_constraint_layout_2"
            android:layout_gravity="center"
            android:text="@string/app_name"
            android:fontFamily="@font/poppins_bold"
            android:textSize="24dp"
            android:shadowColor="@color/green_primary"
            android:textColor="?attr/colorOnBackground"
            tools:ignore="SpUsage" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linearLayout"
        app:layout_constraintBottom_toTopOf="@id/btnProceed"
        app:layout_constraintVertical_bias="0"
        android:text="@string/paragraph_first_open"
        android:textAlignment="center"
        android:textSize="18dp"
        android:ems="11"
        android:fontFamily="@font/poppins_medium"
        tools:ignore="SpUsage" />

    <Button
        android:id="@+id/btnProceed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/margin_top_bottom_constraint_layout"
        android:background="@drawable/buttonshape"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        android:elevation="10dp"
        android:text="@string/get_in"
        android:textSize="22dp"
        tools:ignore="SpUsage" />

</androidx.constraintlayout.widget.ConstraintLayout>